--- a/Sign Up/signup.html
+++ b/Sign Up/signup.html
@@ -18,7 +18,7 @@
         <div class="signup-form">
             <h3 class="text-center mb-4">Sign Up</h3>
             <div class="form-group">
-                <label for="text">Email address</label>
+                <label for="text">Full Name</label>
                 <input type="text" class="form-control" id="text1"
                     name="text" placeholder="Enter name">
             </div>
@@ -33,8 +33,8 @@
                     name="password" placeholder="Password" required>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password1"
+                <label for="password">Confirm Password</label>
+                <input type="password" class="form-control" id="password2"
                     name="password" placeholder="Confirm password">
             </div>
             <button type="submit" onclick="signUp()"
